# SearchBoost

./: .gitignore  Dockerfile  FlowDiagram.pu  LICENSE  README.md  docker-compose.yml  install.sh  main.py  requirements.txt  sb_build.logs  sb_worker.logs
.history/: main_20251224150906.py  main_20251224183521.py  main_20251224183655.py  main_20251224183705.py  main_20251224183706.py  main_20251224183717.py  main_20251224183922.py  main_20251224184001.py  main_20251224184009.py  main_20251224195428.py  main_20251224195607.py  main_20251224195631.py  main_20251224195709.py  main_20251224195718.py  main_20251224200722.py  main_20251224210659.py  main_20251224211000.py  main_20251224211013.py  main_20251224211241.py  main_20251224211256.py  main_20251224211352.py  main_20251224211418.py  main_20251224211446.py  main_20251224211455.py  main_20251224220958.py  main_20251224221012.py  main_20251224222419.py  main_20251224222452.py  main_20251224222609.py  main_20251224222632.py  main_20251224222732.py  main_20251224223012.py  main_20251224223640.py  main_20251224223711.py  main_20251224223749.py  main_20251224223857.py  main_20251224223903.py  main_20251224223917.py  main_20251224224036.py  main_20251224224044.py  (+128 more)
configs/: cloud_ai.json  master.yaml  searxng_settings.yml  web_search.json
scripts/: install.sh
searchboost_service/: Dockerfile  docker-compose.yml  install.sh  main.py  requirements.txt
searchboost_src/: ai_handler.py  api_call.py  api_client.py  argparser.py  (+7 more)
searchboost_warden/: Cargo.toml  Dockerfile  makefile  test.toml
searchboost_warden/src/: main.rs
(+321 files in other folders)
