[package]
name = "sb-warden"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
failsafe = "1.2" # The Circuit Breaker crate
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0" # For easy error handling
bollard = "0.20.1"
future-utils = "0.12.1"
futures-util = "0.3.31"

[[bin]]
name = "searchboost_warden"
path = "src/main.rs"
